@@ -1168,3 +1168,9 @@
 	  missed TX interrupts.
 	* arch/arm/src/lpc17xx/lpc17_ssp.c - Fix a hard fault during SSP
 	  initialization.
+	* configs/nucleus2g/src/up_led.c - Change how LEDs are controlled
+	  so that they can be used both for NuttX instrumentation and
+	  by application software.
+	* include/net/uip/igmp.h and uip-igmp.h - Add header files ini
+	  preparation for NuttX IGMP support
+	* net/uip/uip_igmpinit.c, uip_igmpgroup.c - Add IGMP logic.
